Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-77142

MultiPointTouchArea does not update pressure unless x,y is changed

XMLWordPrintable

    • Linux/Other display system
    • 1b0c45f683cef20aacc8f40273aa89200e9924e4 217dd1b3b03cd40b4bb926631464c684f7f84a69 bc35941dbbf6cbd09805a2217ecb062c565855ad ee9bc61cd906505271bad887664c15b9397906ab (qtbase); ae346195efaca5d01b67c5df1209512c7edaddb0 (qtdeclarative)

      When using a MultiPointTouchArea on a display that supports pressure there are no updates to pressure property of the TouchPoint unless the x/y value is also changed.

      Expected: Pressure can be updated independently of position.

       

      Attachments: 

      kernal-touch-log.txt: output of linux touch driver

      qmlscene-log.txt: output of events from included multi.qml which tests MultiPointTouchArea

      multi.qml: Sample QML file that can be ran with qmlscene to observe the issue. 

        For Gerrit Dashboard: QTBUG-77142
        # Subject Branch Project Status CR V

            srutledg Shawn Rutledge
            thomasvictor Thomas Victor
            Votes:
            1 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved: